# android-ui-agent

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
android-test-app/: settings.gradle.kts
android-test-app/app/: build.gradle.kts  proguard-rules.pro
android-test-app/app/src/main/: AndroidManifest.xml
android-test-app/app/src/main/assets/: sample.html
android-test-app/app/src/main/res/layout/: activity_app_bar_menu.xml  activity_bottom_nav.xml  activity_chips.xml  activity_controls.xml  activity_counter.xml  activity_dialog.xml  activity_file_picker.xml  activity_gestures.xml  activity_list.xml  activity_main.xml  activity_navigation_drawer.xml  activity_notifications.xml  activity_permission.xml  activity_scroll.xml  activity_slider.xml  activity_snackbar_toast.xml  activity_swipe_list.xml  activity_swipe_refresh.xml  activity_tabs.xml  activity_webview.xml  item_list.xml  item_swipe.xml  item_test_case.xml  layout_bottom_sheet.xml
android-test-app/app/src/main/res/menu/: app_bar_menu.xml  (+2 more)
docs/plans/: 2026-01-16-default-device-policy-design.md  2026-01-16-recording-polling-fixes.md
scripts/: mcp_android_app_test.py
src/: __init__.py  server.py
src/core/: __init__.py  device_manager.py  exceptions.py  ref_system.py
src/tools/: __init__.py  _errors.py  device.py  interaction.py  navigation.py  performance.py  recording.py  snapshot.py  wait.py  watcher.py
tests/: __init__.py  test_device_manager.py  test_mcp_app.py  test_poll_intervals.py  test_recording_coordinates.py  test_recording_manager.py  test_ref_system.py  test_server.py
(+27 files in other folders)
