[project]
name = "android-ui-agent"
version = "0.1.0"
description = "MCP server for Android UI automation - provides screenshot and UI hierarchy to AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "uiautomator2>=3.4.0",
    "Pillow>=10.0.0",
    "defusedxml>=0.7.0",  # Security: Prevent XXE attacks
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
android-ui-agent = "src.server:mcp.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires Android device/emulator",
]
